--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         </a>
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#"><h2>Home</h2> </a>
+              <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW1/mypage_bootstrap.html"><h2>Home</h2> </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW1/mypage.html"><h2>Original</h2> </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW1/form.html"><h2>Add Interest</h2> </a>
             </li>
           </ul>
       </nav>
@@ -64,7 +70,7 @@
   <div class="container-fluid p-3">
     <h3>My Interests:</h3>
     <div class="text-center ">
-        <button type="button" class="btn btn-primary">Add interest</button>
+        <a class="btn btn-primary" href="https://bllemay.github.io/SoftDev-HW1/form.html" role="button">Add interest</a>
     </div> 
     <div class="container-fluid p-3">
     <ul class="list-group list-group-flush list-group-horizontal ">
