--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a>
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW1/mypage_bootstrap.html"><h2>Home</h2> </a>
+              <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW1/index.html"><h2>Home</h2> </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW1/mypage.html"><h2>Original</h2> </a>
@@ -104,6 +104,13 @@
     </ul>
   </div> 
   </div>
-    
+   <div class= "container p-3">
+      <h3>Links</h3>
+      <ul>
+        <li><a href="https://bllemay.github.io/SoftDev-HW1/index.html">Home</a> </li>
+        <li> <a href="https://bllemay.github.io/SoftDev-HW1/mypage.html">Original Home</a></li>
+        <li><a href="https://bllemay.github.io/SoftDev-HW1/form.html">Form</a></li>
+      </ul>
+    </div> 
   </body>
 </html>
