--- a/mypage.html
+++ b/mypage.html
@@ -38,5 +38,13 @@
       <li>Staying Fit</li>
       <li>Sports</li>
     </ul>
+    <div class= "container p-3">
+      <h3>Links</h3>
+      <ul>
+        <li><a href="https://bllemay.github.io/SoftDev-HW1/index.html">Home</a> </li>
+        <li> <a href="https://bllemay.github.io/SoftDev-HW1/mypage.html">Original Home</a></li>
+        <li><a href="https://bllemay.github.io/SoftDev-HW1/form.html">Form</a></li>
+      </ul>
+    </div>
   </body>
 </html>
