--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
         </a>
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="http://127.0.0.1:5500/mypage_bootstrap.html"><h2>Home</h2> </a>
+              <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW1/index.html"><h2>Home</h2> </a>
             </li>
           </ul>
       </nav>
