--- a/index.html
+++ b/index.html
@@ -10,24 +10,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="./cards.js"></script>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <a class="navbar-brand" href="#">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQk9aj4HGQDZdaFTQ8Hkfwq_KOtqLUivAsZFWRuqCpn15gV6Whf" alt="head" style="width:60px;">
+      </a>
+      <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW2/index.html"><h2>Home</h2> </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW2/mypage.html"><h2>Original</h2> </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW1/form.html"><h2>Add Interest</h2> </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW2/signup-modal/login.html"><h2>Sign Up Modal</h2> </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW2/tic-tac-toe/tic-tac-toe.html"><h2>Tic Tac Toe game</h2> </a>
+          </li>
+        </ul>
+    </nav>
+
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <a class="navbar-brand" href="#">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQk9aj4HGQDZdaFTQ8Hkfwq_KOtqLUivAsZFWRuqCpn15gV6Whf" alt="head" style="width:60px;">
-        </a>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW1/index.html"><h2>Home</h2> </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW1/mypage.html"><h2>Original</h2> </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://bllemay.github.io/SoftDev-HW1/form.html"><h2>Add Interest</h2> </a>
-            </li>
-          </ul>
-      </nav>
+
     <div class="container-fluid p-9">
         <h1>Lemay, Brian<small class="text-muted">-Software Dev</small></h1>
     </div>
@@ -67,44 +76,41 @@
       </table>
     </div>
   </div>
-  <div class="container-fluid p-3">
-    <h3>My Interests:</h3>
-    <div class="text-center ">
-        <a class="btn btn-primary" href="https://bllemay.github.io/SoftDev-HW1/form.html" role="button">Add interest</a>
-    </div> 
-    <div class="container-fluid p-3">
-    <ul class="list-group list-group-flush list-group-horizontal ">
-        <li class= "list-group-item" >
-            <div class="card container p-3" >
-                <img class="card-img-top img-responsive" src="https://image.shutterstock.com/image-vector/family-time-hand-drawn-vector-260nw-1501373138.jpg" alt="family time">
-                <div class= "card body">
-                    <h3 class= "card-title p-2">Family Time <br></h3>
-                    <p class="card-text p-3"> Relaxing with family and friends is the reason <br> for working in the first place! <br></p>
-                </div>
-            </div>
-        </li> 
-        <li class= "list-group-item" >
-            <div class="card container p-3" >
-                <img class="card-img-top img-responsive" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQgse_1xcWXyyjEF6qvLjxxkC4gFOjabhcV5IxxbGR0v_ld3ViO" alt="staying fit">
-                <div class= "card body">
-                    <h3 class= "card-title p-2">Staying Fit<br></h3>
-                    <p class="card-text p-3"> Staying in shape helps me stay happy and heathy! <br></p>
-                </div>
-            </div>
-        </li> 
-        <li class= "list-group-item" >
-          <div class="card container p-3" >
-              <img class="card-img-top img-responsive" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSDc_vDcl0OBy_yVCt7dH9hsGUg-f8RMAuUpRstQgyxBBijTjKd" alt="sports">
-              <div class= "card body">
-                  <h3 class= "card-title p-2">Playing/ Watching Sports<br></h3>
-                  <p class="card-text p-3"> No matter the sports I enjoy watching and playing!</p>
-              </div>
-          </div>
-      </li> 
-    </ul>
-  </div> 
+
+<!-- Interests Block -->
+<div class="container-fluid p-3">
+  <h3>My Interests</h3>
+    <div class="col text-center">
+      <a class="btn btn-info" href="./form.html" role="button">Add Interest</a>
+    </div>
+</div>
+<br>
+<div class="container-fluid p-3">
+  <div class="card-deck">
+
+    <div class="card p-3" id="interest1" style="width: 18rem;">
+      <img class="card-img-top" src="https://image.shutterstock.com/image-vector/family-time-hand-drawn-vector-260nw-1501373138.jpg" alt="img">
+      <button type="button" class="btn btn-info" onClick="addCard('interest1body')">Add Tweet</button>
+      <div class="card-body" id="interest1body">
+      </div>
+    </div>
+
+    <div class="card p-3" id="interest2"style="width: 18rem;">
+      <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQgse_1xcWXyyjEF6qvLjxxkC4gFOjabhcV5IxxbGR0v_ld3ViO" alt="img">
+      <button type="button" class="btn btn-info" onClick="addCard('interest2body')">Add Tweet</button>
+      <div class="card-body" id="interest2body">
+      </div>
+    </div>
+
+    <div class="card p-3" id="interest3"style="width: 18rem;">
+      <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSDc_vDcl0OBy_yVCt7dH9hsGUg-f8RMAuUpRstQgyxBBijTjKd" alt="img">
+      <button type="button" class="btn btn-info" onClick="addCard('interest3body')">Add Tweet</button>
+      <div class="card-body" id="interest3body">
+      </div>
+    </div>
   </div>
-   <div class= "container p-3">
+
+   <div class= "container-fluid p-3">
       <h3>Links</h3>
       <ul>
         <li><a href="https://bllemay.github.io/SoftDev-HW1/index.html">Home</a> </li>
