--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <!-- Interests Block -->
 <div class="container-fluid p-3">
-  <h3>My Interests</h3>
+  <h3>My Interests:</h3>
     <div class="col text-center">
       <a class="btn btn-info" href="./form.html" role="button">Add Interest</a>
     </div>
